Make classes static and change testcodes